# Cafe.Io

./: CMakeLists.txt  Readme.md  conanfile.py
StreamHelpers/: CMakeLists.txt
StreamHelpers/include/Cafe/Io/StreamHelpers/: BinaryReader.h  BinaryWriter.h
StreamHelpers/src/Cafe/Io/StreamHelpers/: BinaryReader.h  BinaryWriter.h
Streams/: CMakeLists.txt
Streams/cmake/: StreamConfig.h.in
Streams/include/Cafe/Io/Streams/: BufferedStream.h  FileStream.h  MemoryStream.h  StlStream.h  StreamBase.h
Streams/src/: BufferedStream.cpp  FileStream.cpp  MemoryStream.cpp  StlStream.cpp  StreamBase.cpp
Streams/src/Cafe/Io/Streams/: BufferedStream.cpp  BufferedStream.h  FileStream.cpp  FileStream.h  MemoryStream.cpp  MemoryStream.h  StlStream.cpp  StlStream.h  StreamBase.cpp  StreamBase.h
Test/: CMakeLists.txt  StreamHelpers.Test.cpp  Streams.Test.cpp
